plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.datagami'
version = '0.2.0-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.16.0'
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-liquibase'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework:spring-aop:7.0.5'
	implementation 'org.aspectj:aspectjweaver'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.37'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-slf4j:1.1.37'
	implementation 'com.razorpay:razorpay-java:1.4.6'
	implementation 'com.azure:azure-storage-blob:12.29.0'
	implementation 'com.azure:azure-ai-openai:1.0.0-beta.13'
	implementation 'com.azure:azure-communication-email:1.0.9'
	// Verifies Firebase Phone Authentication ID tokens presented by the
	// standalone security-guard app.
	implementation 'com.google.firebase:firebase-admin:9.10.0'
	// OkHttp-backed Azure HTTP client. The default azure-core-http-netty client
	// is not safe for repeated/concurrent sync calls — it throws
	// "IllegalStateException: channel not registered to an event loop" on
	// connection cleanup, which broke bulk cheque OCR. We set this client
	// explicitly on the OpenAIClientBuilder (see AzureOpenAIClientConfig).
	implementation 'com.azure:azure-core-http-okhttp:1.12.10'
	implementation 'org.apache.poi:poi-ooxml:5.3.0'
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
	testImplementation 'org.testcontainers:postgresql:1.20.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	// Gradle defaults test workers to 512m, which the full suite now exhausts:
	// several @SpringBootTest contexts plus the Testcontainers integration tests
	// (GatePassScanConcurrencyIT, OtpLoginRollbackIT) exceed it and the worker
	// dies with OutOfMemoryError part-way through rather than reporting failures.
	maxHeapSize = '2g'
}
